@@ -1,3 +1,9 @@
+2011-07-21  Phil Muldoon  <pmuldoon@redhat.com>
+
+	* observer.texi (GDB Observers): Add before_prompt observer.
+	* gdb.texinfo (Basic Python): Add documentation for prompt
+	substitution.
+
 2011-07-11  Phil Muldoon  <pmuldoon@redhat.com>
 
         PR python/12438
